# tek3-Babel

./: CMakeLists.txt  runBabel.sh
Srcs/Client/: Includes.hpp  main.cpp
Srcs/Client/Audio/: Audio.cpp  Audio.hpp  IAudio.hpp
Srcs/Client/Codec/: Codec.cpp  Codec.hpp  ICodec.hpp
Srcs/Client/Network/: MyThread.cpp  MyThread.hpp  MyUDP.cpp  MyUDP.hpp
Srcs/Server/: main.cpp
client/: main.cpp  mythread.cpp  mythread.hpp  myudp.cpp  myudp.hpp  portaudio.cpp
client/v1/: blockingclient.cpp  blockingclient.hpp  fortunethread.cpp  fortunethread.hpp  main.cpp
client/v2/: client.cpp  client.hpp  main.cpp
server/: main.cpp  sql.cpp  test.db
